--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/foundation-sites@6.7.4/dist/css/foundation.min.css" crossorigin="anonymous">
         <link rel="stylesheet" type="text/css" href="style.css">
         <script src="https://cdn.plot.ly/plotly-2.12.1.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     </head>
     <body>
-        <h1>Cranky Cranky Demo</h1>
+        <center><h1>Cranky Cranky Demo</h1></center>
         <div class="container-lg">
             <div class="grid-container">
                 <div class="grid-x grid-padding-x" style="background-color:white;">
@@ -15,33 +16,38 @@
                         <input type="text" placeholder="Input Variables" disabled>
                     </div>
                     <div class="large-9 cell"></div>
-                    <div class="large-2 cell"><label for="angular_velocity" class="text-left">angular velocity</label></div>
+                    <div class="large-2 cell"><label for="angular_velocity" class="text-left">angular velocity (ω)</label></div>
                     <div class="large-3 cell">    
                         <input type="number" value=5 id="angular_velocity" placeholder="Enter angular velocity">
                     </div>
                     <div class="large-7 cell"></div>
-                    <div class="large-2 cell"><label for="resistivity" class="text-left">resistivity</label></div>
+                    <div class="large-2 cell"><label for="resistivity" class="text-left">resistivity (R)</label></div>
                     <div class="large-3 cell">
                         <input type="number" value=1.72e-8 id="resistivity" placeholder="Enter resistivity">
                     </div>
                     <div class="large-7 cell"></div>
-                    <div class="large-2 cell"><label for="num_coils" class="text-left">num coils</label></div>
+                    <div class="large-2 cell"><label for="num_coils" class="text-left">number of coils (N)</label></div>
                     <div class="large-3 cell">
                         <input type="number" value=200 id="num_coils" placeholder="Enter number of coils">
                     </div>
                     <div class="large-7 cell"></div>
-                    <div class="large-2 cell"><label for="coil_area" class="text-left">coil area</label></div>
+                    <div class="large-2 cell"><label for="coil_area" class="text-left">coil area (A)</label></div>
                     <div class="large-3 cell">
                         <input type="number" value=0.08 id="coil_area" placeholder="Enter coil area">
                     </div>
                     <div class="large-7 cell"></div>
-                    <div class="large-2 cell"><label for="b_field" class="text-left">pole strength</label></div>
+                    <div class="large-2 cell"><label for="b_field" class="text-left">pole strength (B)</label></div>
                     <div class="large-3 cell">
                         <input type="number" value=130 id="b_field" placeholder="Enter pole strength">
                     </div>
                     <div class="large-7 cell"></div>
+                    <div class="large-2 cell"><label for="split_ring" class="text-left">split-ring commutator</label></div>
                     <div class="large-3 cell">
-                        <input type="submit" id="calculate" value="Calculate">
+                        <input type="submit" id="split_ring" value="remove split-ring commutator">
+                    </div>
+                    <div class="large-7 cell"></div>
+                    <div class="large-3 cell">
+                        <input type="submit" id="calculate" value="Recalculate">
                     </div>
                     <div class="large-3 cell">
                         <input type="submit" id="pauseplay" value="Start">
@@ -54,6 +60,19 @@
                     <div class="large-3 cell"><input id="output_power" type="text" placeholder="" disabled></div><div class="large-9 cell"></div>
                     <div class="large-3 cell"><h3>Average Power</h3></div><div class="large-9 cell"></div>
                     <div class="large-3 cell"><input id="average_power" type="text" placeholder="" disabled></div><div class="large-9 cell"></div>    
+                </div>
+                <hr>
+                <div class="grid-x grid-padding-x" style="background-color:white;">
+                    <div class="large-12 cell">
+                        <div id="container">
+                            <div id="draggable">
+                                <div id="south">S</div>
+                                <div id="rotate"></div>
+                                <div id="drag"></div>
+                                <div id="north">N</div>
+                            </div>
+                        </div>  
+                    </div>
                 </div>
             </div>
         </div>
